--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "minnow-engine",
-  "version": "0.3.0",
+  "name": "bitmelo",
+  "version": "0.3.1",
   "description": "A game engine for low resolution games.",
   "main": "src/index.js",
   "scripts": {
@@ -13,15 +13,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/byersdz/minnow-engine.git"
+    "url": "git+https://github.com/byersdz/bitmelo.git"
   },
   "keywords": [],
   "author": "David Byers",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/byersdz/minnow-engine/issues"
+    "url": "https://github.com/byersdz/bitmelo/issues"
   },
-  "homepage": "https://github.com/byersdz/minnow-engine#readme",
+  "homepage": "https://github.com/byersdz/bitmelo#readme",
   "devDependencies": {
     "css-loader": "^2.1.0",
     "esdoc": "^1.1.0",
