reconfiguring how builds work

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "clean-builds": "node utils/cleanlib.js",
     "build": "webpack --config config/webpack.config.lib.js",
     "build-min": "webpack --config config/webpack.config.lib.min.js",
+    "build-txt": "webpack --config config/webpack.config.lib.txt.js",
+    "rename-txt": "node utils/renameTxtLib.js",
+    "build-all": "npm run clean-builds && npm run build-txt && npm run rename-txt && npm run build && npm run build-min",
     "build-docs": "esdoc",
     "demo-start": "webpack-dev-server --open --config demo/config/webpack.demo.dev.js",
     "demo-build": "webpack --config demo/config/webpack.demo.prod.js"
@@ -32,6 +36,7 @@
     "eslint-plugin-import": "^2.16.0",
     "jest": "^24.1.0",
     "style-loader": "^0.23.1",
+    "wait-on": "^3.3.0",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14",
@@ -41,5 +46,8 @@
     "moduleNameMapper": {
       "^SRC(.*)$": "<rootDir>/src$1"
     }
+  },
+  "dependencies": {
+    "raw-loader": "^3.1.0"
   }
 }
