--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bitmelo",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A game engine for making small pixel art games.",
   "main": "src/index.js",
   "type": "module",
@@ -14,7 +14,8 @@
     "build-all": "npm run clean-builds && npm run build-txt && npm run rename-txt && npm run build && npm run build-min",
     "build-docs": "esdoc",
     "demo-start": "webpack-dev-server --open --config demo/config/webpack.demo.dev.js",
-    "demo-build": "webpack --config demo/config/webpack.demo.prod.js"
+    "demo-build": "webpack --config demo/config/webpack.demo.prod.js",
+    "prepublishOnly": "npm run build-all"
   },
   "repository": {
     "type": "git",
@@ -46,7 +47,9 @@
     "webpack-merge": "^4.2.1"
   },
   "babel": {
-    "plugins": ["transform-es2015-modules-commonjs"]
+    "plugins": [
+      "transform-es2015-modules-commonjs"
+    ]
   },
   "jest": {
     "moduleNameMapper": {
